--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -6,4 +6,5 @@
       "header  header"
       "sidebar content";
     height: 100vh;
+    overflow: hidden;
 }
